NEW266737
[WebGPU] CTS validation/render_pipeline/primitive_state.html is failing
https://bugs.webkit.org/show_bug.cgi?id=266737
Summary [WebGPU] CTS validation/render_pipeline/primitive_state.html is failing
Mike Wyrzykowski
Reported 2023-12-20 16:02:55 PST
[WebGPU] CTS validation/render_pipeline/primitive_state.html is failing
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-20 16:03:11 PST
Mike Wyrzykowski
Comment 2 2023-12-21 17:52:42 PST
Note You need to log in before you can comment on or make changes to this bug.