[WebGPU] CTS validation/render_pipeline/primitive_state.html is failing https://bugs.webkit.org/show_bug.cgi?id=266737 <radar://119958339>

Reviewed by Tadeu Zagallo.

Add passing expectations for primitive_state and correct some missing
validation logic.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/primitive_state-expected.txt:
Add passing expectations.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUDeviceImpl.cpp:
(WebCore::WebGPU::convertToBacking):
(WebCore::WebGPU::DeviceImpl::createRenderPipeline):
(WebCore::WebGPU::DeviceImpl::createRenderPipelineAsync):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):

Canonical link: https://commits.webkit.org/272646@main